# qgisconefor

./: .conefordialog.py.un~  .coneforinputs.py.un~  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  README.rst  __init__.py  conefor_dlg.ui  conefordialog.py  coneforinputs.py  coneforinputsprocessor.py  coneforthreads.py  help.html  help_conefor.html  help_dlg.ui  index.html  metadata.txt  mkdocs.yml  processingconeforinputs.py  processingconeforprocessor.py  processingconeforprovider.py  processlayer.py  pyproject.toml  qgisconefor.py  resources.qrc  resources_rc.py  sextanteconeforinputs.py  sextanteconeforprocessor.py  sextanteconeforprovider.py  ui_conefor_dlg.py  ui_help_dlg.py  utilities.py
.github/workflows/: ci.yml  release.yml
about/: index.html
assets/: help.html  help_conefor.html
changelog-base/: index.html
development/: index.html
docs/: about.md  development.md  index.md  user-guide.md
models/: centroid_distances.model3  conefor.model  conefor_test_iic.model  conefor_test_iic_pc.model
previous-docs/: manual.doc  manual.html  manual.odt  manual.rst
processing/: coneforprovider.py  processingconeforinputs.py  processingconeforprocessor.py
repo/: plugins.xml
resources/: resources.qrc
search/: search_index.json
src/plugindev/: pluginadmin.py
src/qgis_conefor/: conefordialog.py  coneforinputsprocessor.py  coneforthreads.py  main.py  processlayer.py  qgisconefor.py  resources.qrc  schemas.py  tablemodel.py  tasks.py  utilities.py
src/qgis_conefor/processing/: coneforprovider.py  provider.py
src/qgis_conefor/processing/algorithms/: base.py  coneforinputs.py  coneforprocessor.py
src/qgis_conefor/processing/models/: centroid_distances.model3  edge_distances.model3
src/qgis_conefor/ui/: conefor_dlg.ui
src/qgisconefor/: __init__.py  conefordialog.py  coneforinputsprocessor.py  main.py  schemas.py  utilities.py
src/qgisconefor/processing/algorithms/: coneforinputs.py
src/qgisconefor/processing/models/: edge_distances.model3
user-guide/: index.html
